[package]
name = "vps-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = "0.30.13"
walkdir = "2.5.0"
glob = "0.3.1"
regex = "1.10.6"
humantime = "2.1.0"
num_cpus = "1.16.0"
